--- a/core.css
+++ b/core.css
@@ -1,11 +1,18 @@
-html * {margin: 0px; padding: 0px}
+html * {
+	margin: 0px; 
+	padding: 0px;
+	font-family: "Calibri";
+}
+
+body {
+	background-image: url("background.png");
+}
 
 #barmenu {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    background-color: #333;
-     overflow: hidden;
+    overflow: hidden;
 }
 
 #barmenu li {
@@ -14,24 +21,30 @@ html * {margin: 0px; padding: 0px}
 
 #barmenu li a {
     display: block;
-    color: white;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-size: 20px;
+    border-style: solid;
+	border: none;
+	margin-bottom: 3px;
 }
 
 /* Change the link color to #111 (black) on hover */
-#barmenu li a:hover {
-    background-color: #111;
-}
 
 #barmenu li a:hover:not(.active) {
-    background-color: #111;
+	border-style: solid;
+	border: none;
+	margin-bottom: 0px;
+    border-bottom: solid 3px rgb(116, 27, 71);
 }
 
 #barmenu .active {
-    background-color: #4CAF50;
+    background-color: rgb(116, 27, 71);
+    color: white;
 }
 #barmenu .active:hover {
-    background-color: #4CAF50;
+    background-color: rgb(116, 27, 71);
 }
+
