--- a/core.css
+++ b/core.css
@@ -79,3 +79,14 @@ body {
 	margin: 0 auto;
 	width: 160px;
 }
+
+h2 {
+	color: rgb(116, 27, 71);
+	font-weight: 400;
+}
+
+#pcontainer {
+	width: 90%;
+	margin-left: auto;
+	margin-right: auto;
+}
