--- a/core.css
+++ b/core.css
@@ -5,6 +5,10 @@ html * {
 	font-weight: 100;
 }
 
+b {
+	font-weight: 900;
+}
+
 body {
 	background-image: url("background.png");
 }
@@ -57,14 +61,14 @@ body {
 }
 
 #intro {
-	font-size: 70px;
+	font-size: 55px;
 	color: rgb(116, 27, 71);
 	text-align: center;
 
 }
 
 #blurb {
-	font-size: 35px;
+	font-size: 20px;
 	color: black;
 	text-align: center;
 }
@@ -72,8 +76,8 @@ body {
 #profile {
 	display: block;
 	border-radius: 50%;
-	height: 320px;
-	width: 320px;
+	height: 160px;
+	width: 160px;
 	margin-left: auto;
     margin-right: auto;
 }
@@ -114,4 +118,15 @@ body {
 	display: inline-block;
 	padding-left: 30px;
 	padding-right: 30px;
+}
+
+#bio {
+	width: 400px;
+	padding: 15px;
+	height: 314px;
+	border: 0.5px solid;
+	background: white;
+	margin-top: 14px;
+	margin-left: 40px;
+	font-size: 18px;
 }
