--- a/core.css
+++ b/core.css
@@ -26,6 +26,7 @@ body {
     position: fixed;
     border-bottom: #a6a9ad 0.5px solid;
     width: 100%;
+    background-image: url("background.png");
 }
 
 #barmenu li {
