--- a/core.css
+++ b/core.css
@@ -13,7 +13,7 @@ html * {
 }
 
 body {
-  background: red; /* For browsers that do not support gradients */
+  background: gray; /* For browsers that do not support gradients */
   background: -webkit-linear-gradient(-20deg, var(--b-color2), var(--b-color)); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(-20deg, var(--b-color2), var(--b-color)); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(-20deg, var(--b-color2), var(--b-color)); /* For Firefox 3.6 to 15 */
